# osm-data-classification

./: .Rhistory  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  src-scheme.odp
article/: README.md  article1_OSM-data-analysis-framework.org  article1_geomatique_expert.org  article2_OSM-data-presentation.org  article2_geomatique_expert.org  article3_OSM-data-historical-overview.org  article4_OSM-tag-genome.org  article5_OSM-metadata-description.org  article6_OSM-user-classification.org  article7_OSM-data-quality-assessment.org  article8_OSM-data-quality-comparison.org
data/: datapath
demo/: DBScan.ipynb  OSM_nb.Rmd  OSM_nb.nb.html  Users.ipynb  chgset_analysis.ipynb  osm_parsing.ipynb  results-analysis.ipynb
osmdq/: analysis_tasks.py  data_preparation_tasks.py  extract-changesets.py  extract_user_editor.py  geom_tasks.py  metadata_plotting.py  osm_carroying.sql  osmparsing.py  output_tasks.py  process-changesets-user-history.py  tagmetanalyse.py  unsupervised_learning.py  utils.py  validitycheck.py
refs/: OSMdata  OSMdata.bak
src/: .#OSMfiggen.py  OSM-history-parsing.py  OSM-latest-data.py  OSM-metadata-extract.py  OSM-metadata-plotting.py  OSM-tag-analyse.py  OSM-tag-genome-parsing.py  OSM-tag-metanalyse.py  OSMdata.R  OSMdata.py  OSMdata.py~  analysis_task.py  analysis_tasks.py  bordeaux_metropole_geometry.sql  changeset-history-stats.py  data_preparation_tasks.py  elemmdextract.py  extract-changesets.py  extract-user-editor.py  extract_user_editor.py  geom_tasks.py  historyparsing.py  latestdata.py  metadata_plotting.py  (+19 more)
(+1 files in other folders)
