[tool.poetry]
name = "osm-data-quality"
version = "0.2.0"
description = "Analyze OSM contribution metadata with machine learning"
license = "MIT"
authors = ["Damien Garaud <damien.garaud@oslandia.com>", "Raphaël Delhome <raphael.delhome@oslandia.com>"]

# see versions and constraints https://poetry.eustace.io/docs/versions/
[tool.poetry.dependencies]
python = "^3.6"
pandas = "=0.20.3"
osmium = "^2.15"
luigi = "^2.8"
scikit-learn = "^0.21.3"
tables = "^3.5"
statsmodels = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
ipdb = "^0.11.0"
seaborn = "^0.9.0"
notebook = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

